--- a/.github/workflows/backend-ci-cd.yaml
+++ b/.github/workflows/backend-ci-cd.yaml
@@ -4,17 +4,12 @@ on:
   push:
     branches:
       - '*'
-    paths-ignore:
-      - frontend/**
     tags:
       - '*'
 
   pull_request:
     branches:
       - '*'
-    paths-ignore:
-      - frontend/**
-
 
 jobs:
   Build_Backend:
@@ -22,19 +17,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: build
-        run: docker build -t backend ./backend
+        run: docker build -t flickit-bff ./
 
 
   Sonar:
-   needs: Build_Backend
-   runs-on: ubuntu-latest
-   steps:
-     - uses: actions/checkout@v2
-     - name: SonarCloud Scan
-       uses: SonarSource/sonarcloud-github-action@master
-       env:
-         GITHUB_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
-         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    needs: Build_Backend
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   Backend_Push_Latest_Image:
     if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
@@ -43,7 +38,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: create image from repository
-        run: docker build -t ghcr.io/flickit-platform/flickit-platform:"${GITHUB_SHA:0:7}" ./backend
+        run: docker build -t ghcr.io/flickit-platform/flickit-bff:"${GITHUB_SHA:0:7}" ./
       - name: login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -51,7 +46,7 @@ jobs:
           username: flickit-platform
           password: ${{ secrets.GH_PACKAGES_TOKEN }}
       - name: push image to GitHub Container Registry
-        run: docker push ghcr.io/flickit-platform/flickit-platform:"${GITHUB_SHA:0:7}"
+        run: docker push ghcr.io/flickit-platform/flickit-bff:"${GITHUB_SHA:0:7}"
 
   Backend_Deploy_Latest:
     needs: Backend_Push_Latest_Image
@@ -66,8 +61,6 @@ jobs:
         env:
           DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN_BACKEND_STAGE }}
           APP_ID: ${{ secrets.APP_ID_BACKEND_STAGE }}
-
-
 
   Backend_Push_Image:
     if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
@@ -94,9 +87,9 @@ jobs:
           password: ${{ secrets.GH_PACKAGES_TOKEN }}
       - uses: actions/checkout@v2
       - name: create image from repository
-        run: docker build -t ghcr.io/flickit-platform/flickit-platform:${{ steps.TAG.outputs.tag }} ./backend
+        run: docker build -t ghcr.io/flickit-platform/flickit-bff:${{ steps.TAG.outputs.tag }} ./
       - name: push image to GitHub Container Registry
-        run: docker push ghcr.io/flickit-platform/flickit-platform:${{ steps.TAG.outputs.tag }}
+        run: docker push ghcr.io/flickit-platform/flickit-bff:${{ steps.TAG.outputs.tag }}
 
   Backend_Deploy:
     needs: Backend_Push_Image
@@ -110,5 +103,5 @@ jobs:
         run: darkube deploy --ref main --token ${DEPLOY_TOKEN} --app-id ${APP_ID}  --image-tag "${TAG}" --job-id "$GITHUB_RUN_ID" --stateless-app true
         env:
           DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN_BACKEND_PRODUCTION }}
-          APP_ID: ${{ secrets.APP_ID_BACKEND_PRODUCTION  }}
+          APP_ID: ${{ secrets.APP_ID_BACKEND_PRODUCTION }}
           TAG: ${{needs.Backend_Push_Image.outputs.TAG}}
