--- a/.github/workflows/backend-ci-cd.yaml
+++ b/.github/workflows/backend-ci-cd.yaml
@@ -105,15 +105,14 @@ jobs:
 
   Backend_Deploy:
     needs: Backend_Push_Image
-    container:
-      image: registry.hectora.cloud/hectora-public/darkube-cli:v1.1
-      env:
-        CONSOLE_API_BASE_URL: "https://api.hectora.cloud"
     runs-on: ubuntu-latest
     steps:
-      - name: Run script
-        run: darkube deploy --ref main --token ${DEPLOY_TOKEN} --app-id ${APP_ID}  --image-tag "${TAG}" --job-id "$GITHUB_RUN_ID" --stateless-app true
+      - name: Deploy service on Webhook
+        run: |
+          status_code=$(curl --silent --output /dev/null --write-out "%{http_code}" -X POST "${{ secrets.DEPLOY_WEBHOOK_URL_PRODUCTION }}?tag=${TAG}")
+          if [ "$status_code" -ne 204 ]; then
+            echo "Unexpected status code: $status_code"
+            exit 1
+          fi
         env:
-          DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN_BACKEND_PRODUCTION }}
-          APP_ID: ${{ secrets.APP_ID_BACKEND_PRODUCTION }}
           TAG: ${{needs.Backend_Push_Image.outputs.TAG}}
