--- a/.github/workflows/backend-ci-cd.yaml
+++ b/.github/workflows/backend-ci-cd.yaml
@@ -90,15 +90,17 @@ jobs:
         run: docker push ghcr.io/flickit-platform/flickit-bff:${{ steps.TAG.outputs.tag }}
 
   Backend_Deploy:
-    needs: Backend_Push_Image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy service on Webhook
-        run: |
-          status_code=$(curl --silent --output /dev/null --write-out "%{http_code}" -X POST "${{ secrets.DEPLOY_WEBHOOK_URL_PRODUCTION }}?tag=${TAG}")
-          if [ "$status_code" -ne 204 ]; then
-            echo "Unexpected status code: $status_code"
-            exit 1
-          fi
-        env:
-          TAG: ${{needs.Backend_Push_Image.outputs.TAG}}
+      needs: Backend_Push_Image
+      runs-on: ubuntu-latest
+      steps:
+        - name: Deploy service on Webhook
+          run: |
+            status_code=$(curl --silent --output /dev/null --write-out "%{http_code}" \
+              -X POST "${{ secrets.BACKEND_VERSION }}?BACKEND_VERSION=${TAG}")
+            if [ "$status_code" -ne 204 ]; then
+              echo "Unexpected status code: $status_code"
+              exit 1
+            fi
+          env:
+            TAG: ${{ needs.Backend_Push_Image.outputs.TAG }}
+
