--- a/.github/workflows/backend-ci-cd.yaml
+++ b/.github/workflows/backend-ci-cd.yaml
@@ -51,14 +51,19 @@ jobs:
   Backend_Deploy_Latest:
     needs: Backend_Push_Latest_Image
     runs-on: ubuntu-latest
+  
+    container:
+      image: hamravesh/darkube-cli:v1.1
+      options: --user root
+  
     steps:
-      - name: Deploy service on Webhook
+      - name: darkube-cli deploy
         run: |
-          status_code=$(curl --silent --output /dev/null --write-out "%{http_code}" -X POST "${{ secrets.DEPLOY_WEBHOOK_URL }}?BACKEND_VERSION=${GITHUB_SHA:0:7}")
-          if [ "$status_code" -ne 204 ]; then
-            echo "Unexpected status code: $status_code"
-            exit 1
-          fi
+          darkube deploy \
+            --token ${{ secrets.DEPLOY_TOKEN_BACKEND_FLICKIT_STAGE_HAMRAVESH_C13 }} \
+            --app-id ${{ secrets.APP_ID_BACKEND_FLICKIT_STAGE_HAMRAVESH_C13 }} \
+            --image-tag "${GITHUB_SHA:0:7}" \
+            --job-id "${GITHUB_RUN_ID}"
 
   Backend_Push_Image:
     if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') }}
@@ -90,17 +95,22 @@ jobs:
         run: docker push ghcr.io/flickit-platform/flickit-bff:${{ steps.TAG.outputs.tag }}
 
   Backend_Deploy:
-      needs: Backend_Push_Image
-      runs-on: ubuntu-latest
-      steps:
-        - name: Deploy service on Webhook
-          run: |
-            status_code=$(curl --silent --output /dev/null --write-out "%{http_code}" \
-              -X POST "${{ secrets.BACKEND_VERSION }}?BACKEND_VERSION=${TAG}")
-            if [ "$status_code" -ne 204 ]; then
-              echo "Unexpected status code: $status_code"
-              exit 1
-            fi
-          env:
-            TAG: ${{ needs.Backend_Push_Image.outputs.TAG }}
+    needs: Backend_Push_Image
+    runs-on: ubuntu-latest
+  
+    container:
+      image: hamravesh/darkube-cli:v1.1
+      options: --user root
+  
+    steps:
+      - name: darkube-cli deploy
+        run: |
+          darkube deploy \
+            --token ${{ secrets.DEPLOY_TOKEN_BACKEND_FLICKIT_HAMRAVESH_C13 }} \
+            --app-id ${{ secrets.APP_ID_BACKEND_FLICKIT_HAMRAVESH_C13 }} \
+            --image-tag "${TAG}" \
+            --job-id "${GITHUB_RUN_ID}"
+        env:
+          TAG: ${{ needs.Backend_Push_Image.outputs.TAG }}
+
 
